--- a/package.json
+++ b/package.json
@@ -40,12 +40,15 @@
   "dependencies": {
     "@angular/fire": "^5.0.2",
     "firebase": "^5.5.2",
+    "hammerjs": "^2.0.8",
     "node-ts3sdk-client": "^3.0.4-14",
     "tern": "^0.22.2",
     "yargs": "^12.0.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.6.3",
+    "@angular/animations": "^6.1.9",
+    "@angular/cdk": "^6.4.7",
     "@angular/cli": "6.1.2",
     "@angular/common": "6.1.2",
     "@angular/compiler": "6.1.2",
@@ -54,6 +57,7 @@
     "@angular/forms": "6.1.2",
     "@angular/http": "6.1.2",
     "@angular/language-service": "6.1.2",
+    "@angular/material": "^6.4.7",
     "@angular/platform-browser": "6.1.2",
     "@angular/platform-browser-dynamic": "6.1.2",
     "@angular/router": "6.1.2",
