--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,33 @@
 {
     "cSpell.words": [
         "firestore"
+    ],
+    "cSpell.enabledLanguageIds": [
+        "asciidoc",
+        "blade",
+        "c",
+        "cpp",
+        "csharp",
+        "css",
+        "go",
+        "handlebars",
+        "html",
+        "jade",
+        "javascript",
+        "javascriptreact",
+        "json",
+        "latex",
+        "less",
+        "markdown",
+        "php",
+        "plaintext",
+        "pub",
+        "python",
+        "restructuredtext",
+        "rust",
+        "text",
+        "typescript",
+        "typescriptreact",
+        "yml"
     ]
 }
