--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   "main": "main.js",
   "private": true,
   "scripts": {
-    "rebuild": "electron-rebuild -f -w node-ts3sdk-client",
     "postinstall": "npm run postinstall:electron && npx electron-builder install-app-deps",
     "postinstall:web": "node postinstall-web",
     "postinstall:electron": "node postinstall",
@@ -32,7 +31,7 @@
     "electron:serve": "wait-on http-get://localhost:4200/ && npm run electron:serve-tsc && electron . --serve",
     "electron:local": "npm run build:prod && electron .",
     "electron:linux": "npm run build:prod && npx electron-builder build --linux",
-    "electron:windows": "npm run build:prod && npx electron-builder build --windows",
+    "electron:windows": "npm run build:prod && cp ts3client.node.win64 node_modules/node-ts3sdk-client/bin/win64/ts3client.node && npx electron-builder build --windows",
     "electron:mac": "npm run build:prod && npx electron-builder build --mac",
     "test": "npm run postinstall:web && ng test",
     "e2e": "npm run postinstall:web && ng e2e"
@@ -72,7 +71,6 @@
     "core-js": "2.5.6",
     "electron": "^2.0.10",
     "electron-builder": "20.28.1",
-    "electron-rebuild": "^1.8.2",
     "electron-reload": "1.2.2",
     "jasmine-core": "3.1.0",
     "jasmine-spec-reporter": "4.2.1",
