--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@angular/fire": "^5.0.2",
     "firebase": "^5.5.2",
     "hammerjs": "^2.0.8",
-    "node-ts3sdk-client": "^3.0.4-14",
+    "node-ts3sdk-client": "github:adamk33n3r/node-ts3sdk-client",
     "tern": "^0.22.2",
     "yargs": "^12.0.2"
   },
