Upgrade to Angular7

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,5 +30,10 @@
         "typescript",
         "typescriptreact",
         "yml"
-    ]
+    ],
+    "files.exclude": {
+        "**/*.map": true,
+        "dist": true,
+        "node_modules": true
+    }
 }
