--- a/package.json
+++ b/package.json
@@ -39,27 +39,29 @@
   "dependencies": {
     "@angular/fire": "^5.0.2",
     "firebase": "^5.5.2",
+    "grpc": "^1.24.3",
     "hammerjs": "^2.0.8",
     "node-ts3sdk-client": "github:adamk33n3r/node-ts3sdk-client",
     "tern": "^0.22.2",
+    "tslib": "^1.9.0",
     "yargs": "^12.0.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.6.3",
+    "@angular-devkit/build-angular": "~0.13.0",
     "@angular/animations": "^6.1.9",
     "@angular/cdk": "^6.4.7",
-    "@angular/cli": "6.1.2",
-    "@angular/common": "6.1.2",
-    "@angular/compiler": "6.1.2",
-    "@angular/compiler-cli": "6.1.2",
-    "@angular/core": "6.1.2",
-    "@angular/forms": "6.1.2",
-    "@angular/http": "6.1.2",
-    "@angular/language-service": "6.1.2",
+    "@angular/cli": "7.3.10",
+    "@angular/common": "7.2.16",
+    "@angular/compiler": "7.2.16",
+    "@angular/compiler-cli": "7.2.16",
+    "@angular/core": "7.2.16",
+    "@angular/forms": "7.2.16",
+    "@angular/http": "7.2.16",
+    "@angular/language-service": "7.2.16",
     "@angular/material": "^6.4.7",
-    "@angular/platform-browser": "6.1.2",
-    "@angular/platform-browser-dynamic": "6.1.2",
-    "@angular/router": "6.1.2",
+    "@angular/platform-browser": "7.2.16",
+    "@angular/platform-browser-dynamic": "7.2.16",
+    "@angular/router": "7.2.16",
     "@fortawesome/fontawesome-free": "^5.3.1",
     "@ngx-translate/core": "10.0.1",
     "@ngx-translate/http-loader": "3.0.1",
@@ -85,7 +87,7 @@
     "rxjs": "6.2.2",
     "ts-node": "6.0.3",
     "tslint": "5.10.0",
-    "typescript": "2.7.2",
+    "typescript": "^3.1.1",
     "wait-on": "2.1.0",
     "webdriver-manager": "12.0.6",
     "zone.js": "0.8.26"
