--- a/package.json
+++ b/package.json
@@ -47,21 +47,20 @@
     "yargs": "^12.0.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/animations": "^6.1.9",
-    "@angular/cdk": "^6.4.7",
-    "@angular/cli": "7.3.10",
-    "@angular/common": "7.2.16",
-    "@angular/compiler": "7.2.16",
-    "@angular/compiler-cli": "7.2.16",
-    "@angular/core": "7.2.16",
-    "@angular/forms": "7.2.16",
-    "@angular/http": "7.2.16",
-    "@angular/language-service": "7.2.16",
-    "@angular/material": "^6.4.7",
-    "@angular/platform-browser": "7.2.16",
-    "@angular/platform-browser-dynamic": "7.2.16",
-    "@angular/router": "7.2.16",
+    "@angular-devkit/build-angular": "~0.803.28",
+    "@angular/animations": "^8.2.14",
+    "@angular/cdk": "^8.2.3",
+    "@angular/cli": "8.3.28",
+    "@angular/common": "8.2.14",
+    "@angular/compiler": "8.2.14",
+    "@angular/compiler-cli": "8.2.14",
+    "@angular/core": "8.2.14",
+    "@angular/forms": "8.2.14",
+    "@angular/language-service": "8.2.14",
+    "@angular/material": "^8.2.3",
+    "@angular/platform-browser": "8.2.14",
+    "@angular/platform-browser-dynamic": "8.2.14",
+    "@angular/router": "8.2.14",
     "@fortawesome/fontawesome-free": "^5.3.1",
     "@ngx-translate/core": "10.0.1",
     "@ngx-translate/http-loader": "3.0.1",
@@ -69,7 +68,7 @@
     "@types/jasminewd2": "2.0.3",
     "@types/node": "8.9.4",
     "bootstrap": "^4.1.3",
-    "codelyzer": "4.2.1",
+    "codelyzer": "^5.0.1",
     "core-js": "2.5.6",
     "electron": "^2.0.10",
     "electron-builder": "20.28.1",
@@ -84,12 +83,12 @@
     "npm-run-all": "4.1.3",
     "npx": "10.2.0",
     "protractor": "5.3.2",
-    "rxjs": "6.2.2",
+    "rxjs": "6.6.0",
     "ts-node": "6.0.3",
     "tslint": "5.10.0",
-    "typescript": "^3.1.1",
+    "typescript": "^3.5.3",
     "wait-on": "2.1.0",
     "webdriver-manager": "12.0.6",
-    "zone.js": "0.8.26"
+    "zone.js": "~0.9.1"
   }
 }
