--- a/package.json
+++ b/package.json
@@ -40,35 +40,34 @@
     "@angular/fire": "^5.0.2",
     "firebase": "^5.5.2",
     "grpc": "^1.24.3",
-    "hammerjs": "^2.0.8",
     "node-ts3sdk-client": "github:adamk33n3r/node-ts3sdk-client",
     "tern": "^0.22.2",
-    "tslib": "^1.9.0",
+    "tslib": "^1.10.0",
     "yargs": "^12.0.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.28",
-    "@angular/animations": "^8.2.14",
-    "@angular/cdk": "^8.2.3",
-    "@angular/cli": "8.3.28",
-    "@angular/common": "8.2.14",
-    "@angular/compiler": "8.2.14",
-    "@angular/compiler-cli": "8.2.14",
-    "@angular/core": "8.2.14",
-    "@angular/forms": "8.2.14",
-    "@angular/language-service": "8.2.14",
-    "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "8.2.14",
-    "@angular/platform-browser-dynamic": "8.2.14",
-    "@angular/router": "8.2.14",
+    "@angular-devkit/build-angular": "~0.901.11",
+    "@angular/animations": "^9.1.12",
+    "@angular/cdk": "^9.2.4",
+    "@angular/cli": "9.1.11",
+    "@angular/common": "9.1.12",
+    "@angular/compiler": "9.1.12",
+    "@angular/compiler-cli": "9.1.12",
+    "@angular/core": "9.1.12",
+    "@angular/forms": "9.1.12",
+    "@angular/language-service": "9.1.12",
+    "@angular/material": "^9.2.4",
+    "@angular/platform-browser": "9.1.12",
+    "@angular/platform-browser-dynamic": "9.1.12",
+    "@angular/router": "9.1.12",
     "@fortawesome/fontawesome-free": "^5.3.1",
     "@ngx-translate/core": "10.0.1",
     "@ngx-translate/http-loader": "3.0.1",
     "@types/jasmine": "2.8.7",
     "@types/jasminewd2": "2.0.3",
-    "@types/node": "8.9.4",
+    "@types/node": "^12.11.1",
     "bootstrap": "^4.1.3",
-    "codelyzer": "^5.0.1",
+    "codelyzer": "^5.1.2",
     "core-js": "2.5.6",
     "electron": "^2.0.10",
     "electron-builder": "20.28.1",
@@ -86,9 +85,9 @@
     "rxjs": "6.6.0",
     "ts-node": "6.0.3",
     "tslint": "5.10.0",
-    "typescript": "^3.5.3",
+    "typescript": "^3.8.3",
     "wait-on": "2.1.0",
     "webdriver-manager": "12.0.6",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.10.2"
   }
 }
