--- a/package.json
+++ b/package.json
@@ -42,24 +42,24 @@
     "grpc": "^1.24.3",
     "node-ts3sdk-client": "github:adamk33n3r/node-ts3sdk-client",
     "tern": "^0.22.2",
-    "tslib": "^1.10.0",
+    "tslib": "^2.0.0",
     "yargs": "^12.0.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.11",
-    "@angular/animations": "^9.1.12",
-    "@angular/cdk": "^9.2.4",
-    "@angular/cli": "9.1.11",
-    "@angular/common": "9.1.12",
-    "@angular/compiler": "9.1.12",
-    "@angular/compiler-cli": "9.1.12",
-    "@angular/core": "9.1.12",
-    "@angular/forms": "9.1.12",
-    "@angular/language-service": "9.1.12",
-    "@angular/material": "^9.2.4",
-    "@angular/platform-browser": "9.1.12",
-    "@angular/platform-browser-dynamic": "9.1.12",
-    "@angular/router": "9.1.12",
+    "@angular-devkit/build-angular": "~0.1000.3",
+    "@angular/animations": "^10.0.4",
+    "@angular/cdk": "^10.0.2",
+    "@angular/cli": "10.0.3",
+    "@angular/common": "10.0.4",
+    "@angular/compiler": "10.0.4",
+    "@angular/compiler-cli": "10.0.4",
+    "@angular/core": "10.0.4",
+    "@angular/forms": "10.0.4",
+    "@angular/language-service": "10.0.4",
+    "@angular/material": "^10.0.2",
+    "@angular/platform-browser": "10.0.4",
+    "@angular/platform-browser-dynamic": "10.0.4",
+    "@angular/router": "10.0.4",
     "@fortawesome/fontawesome-free": "^5.3.1",
     "@ngx-translate/core": "10.0.1",
     "@ngx-translate/http-loader": "3.0.1",
@@ -67,25 +67,25 @@
     "@types/jasminewd2": "2.0.3",
     "@types/node": "^12.11.1",
     "bootstrap": "^4.1.3",
-    "codelyzer": "^5.1.2",
+    "codelyzer": "^6.0.0",
     "core-js": "2.5.6",
     "electron": "^2.0.10",
     "electron-builder": "20.28.1",
     "electron-reload": "1.2.2",
-    "jasmine-core": "3.1.0",
-    "jasmine-spec-reporter": "4.2.1",
-    "karma": "2.0.2",
-    "karma-chrome-launcher": "2.2.0",
-    "karma-coverage-istanbul-reporter": "2.0.0",
-    "karma-jasmine": "1.1.2",
-    "karma-jasmine-html-reporter": "1.1.0",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~3.3.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "npm-run-all": "4.1.3",
     "npx": "10.2.0",
-    "protractor": "5.3.2",
+    "protractor": "~7.0.0",
     "rxjs": "6.6.0",
     "ts-node": "6.0.3",
-    "tslint": "5.10.0",
-    "typescript": "^3.8.3",
+    "tslint": "~6.1.0",
+    "typescript": "^3.9.7",
     "wait-on": "2.1.0",
     "webdriver-manager": "12.0.6",
     "zone.js": "~0.10.2"
