--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
   },
   "dependencies": {
     "@angular/fire": "^5.0.2",
-    "firebase": "^5.5.2",
+    "firebase": "^7.16.1",
     "grpc": "^1.24.3",
-    "node-ts3sdk-client": "github:adamk33n3r/node-ts3sdk-client",
+    "node-ts3sdk-client": "github:adamk33n3r/node-ts3sdk-client#context-aware",
     "tern": "^0.22.2",
     "tslib": "^2.0.0",
     "yargs": "^12.0.2"
@@ -69,7 +69,7 @@
     "bootstrap": "^4.1.3",
     "codelyzer": "^6.0.0",
     "core-js": "2.5.6",
-    "electron": "^2.0.10",
+    "electron": "^9.1.0",
     "electron-builder": "20.28.1",
     "electron-reload": "1.2.2",
     "jasmine-core": "~3.5.0",
