--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "codelyzer": "^6.0.0",
     "core-js": "2.5.6",
     "electron": "^9.1.0",
-    "electron-builder": "20.28.1",
+    "electron-builder": "^22.7.0",
     "electron-reload": "1.2.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
