--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,10 +1,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "downlevelIteration": true,
-    "importHelpers": true,
     "module": "es2020",
-    "strict": true,
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
@@ -22,9 +19,12 @@
       "dom"
     ]
   },
+  "files": [
+    "src/main.ts",
+    "src/polyfills.ts"
+  ],
   "include": [
-    "main.ts",
-    "src/**/*"
+    "src/**/*.d.ts"
   ],
   "exclude": [
     "node_modules"
