--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "chumspeak": {
+    "chumchat": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -90,24 +90,24 @@
         "serve": {
           "builder": "@angular-builders/custom-webpack:dev-server",
           "options": {
-            "browserTarget": "chumspeak:build"
+            "browserTarget": "chumchat:build"
           },
           "configurations": {
             "dev": {
-              "browserTarget": "chumspeak:build:dev"
+              "browserTarget": "chumchat:build:dev"
             },
             "web": {
-              "browserTarget": "chumspeak:build:web"
+              "browserTarget": "chumchat:build:web"
             },
             "production": {
-              "browserTarget": "chumspeak:build:production"
+              "browserTarget": "chumchat:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "chumspeak:build"
+            "browserTarget": "chumchat:build"
           }
         },
         "test": {
@@ -145,7 +145,7 @@
         }
       }
     },
-    "chumspeak-e2e": {
+    "chumchat-e2e": {
       "root": "e2e",
       "projectType": "application",
       "architect": {
@@ -164,14 +164,14 @@
       }
     }
   },
-  "defaultProject": "chumspeak",
+  "defaultProject": "chumchat",
   "schematics": {
     "@schematics/angular:component": {
-      "prefix": "app",
+      "prefix": "chum",
       "style": "scss"
     },
     "@schematics/angular:directive": {
-      "prefix": "app"
+      "prefix": "chum"
     }
   }
 }
